# Personal-knowledge-engine

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ARCHITECTURE_REVISED.md  CLAUDE.md  CONTRIBUTING.md  CURRENT_TASK.md  Makefile  README.md  WRITER_PORTRAIT_TEMPLATE.md  ci_quick_check.ps1  cli.py  config.py  contacts.txt  count_empty_notes.py  enrich_daily_brief.bat  fake_test.py  ingest.py  main.py  mypy.ini  project_structure.txt  pyproject.toml  pytest.ini  requirements.txt  roadmap.md  start_pke_api.bat  supabase_client.py  supabase_client.py.bak  trimmed_structure.txt  weekly_synthesis.bat
.github/: copilot-instructions.md
.github/workflows/: ci.yml  content-agent-daily.yml
Cli/: notes_cli.py
ingestion/: parse_note.py
legacy_cli/: cli.py
pke/: embedding.py  entity_resolution.py  ingestion.py  logging_utils.py  supabase_client.py  types.py  wrapped_supabase_client.py
pke/api/: main.py
pke/api/models/: query.py
pke/api/routes/: query.py
pke/chunking/: __init__.py  archetype_a.py  archetype_b.py  archetype_c.py  archetype_d.py  archetype_e.py  chunk.py  chunker.py  date_parser.py  resource_extractor.py
pke/cli/: __init__.py  embed_chunks.py  embed_retrieval_units.py  ingest.py  ingest_imessage.py  ingest_yahoo.py  main.py  notes.py  notes_cli.py  parse_cli.py
pke/embedding/: __init__.py  deterministic.py  embedding_client.py  openai_client.py
pke/ingestion/: __init__.py  imessage_ingestor.py  notebook_resolution.py  obsidian_ingestor.py  orchestrator.py  parse_note.py  resource_resolution.py  tag_resolution.py  yahoo_mail_ingestor.py
pke/parsers/: contact_identity_map.py  imessage_parser.py  joplin_markdown.py  joplin_sync_parser.py  obsidian_parser.py  obsidian_syntax.py  yahoo_mail_parser.py
pke/retrieval/: retriever.py
pke/supabase/: dummy_client.py
scripts/: add_imessage_tables.sql  add_match_functions.sql  add_retrieval_units_and_email_tables.sql  corpus_analysis.py  diagnose_type1_notes.py  ingest_to_supabase.py  inspect_schema.sql  parse_joplin_sync.py  scan_joplin_sync.py  test_supabase_client_stub.py
scripts/content_agent/: MANDATE.md  README.md  books.json  composer.py  connector.py  editor.py  pipeline.py  scout.py  sources.json
scripts/content_agent/output/briefs/: composer_errors_2026-05-16.json  daily_drop_2026-04-04.md  daily_drop_2026-04-05.md  daily_drop_2026-04-06.md  daily_drop_2026-04-07.md  daily_drop_2026-04-08.md  daily_drop_2026-04-09.md  daily_drop_2026-04-10.md  daily_drop_2026-04-11.md  daily_drop_2026-04-12.md  daily_drop_2026-04-13.md  daily_drop_2026-04-14.md  daily_drop_2026-04-15.md  daily_drop_2026-04-16.md  daily_drop_2026-04-17.md  daily_drop_2026-04-18.md  daily_drop_2026-04-19.md  daily_drop_2026-04-20.md  daily_drop_2026-04-21.md  daily_drop_2026-04-24.md  daily_drop_2026-04-29.md  daily_drop_2026-05-01.md  daily_drop_2026-05-02.md  daily_drop_2026-05-03.md  daily_drop_2026-05-04.md  daily_drop_2026-05-05.md  daily_drop_2026-05-06.md  daily_drop_2026-05-07.md  daily_drop_2026-05-08.md  daily_drop_2026-05-09.md  daily_drop_2026-05-10.md  daily_drop_2026-05-11.md  daily_drop_2026-05-12.md  daily_drop_2026-05-13.md  daily_drop_2026-05-14.md  daily_drop_2026-05-15.md  daily_drop_2026-05-16.md  weekly_synthesis_2026_W14.md  weekly_synthesis_2026_W15.md  weekly_synthesis_2026_W16.md
scripts/content_agent/output/connected/: connected_2026-04-04.json  connected_2026-04-05.json  connected_2026-04-18.json
scripts/content_agent/output/filtered/: daily_drop_2026-04-04.md  daily_drop_2026-04-05.md  daily_drop_2026-04-06.md  daily_drop_2026-04-07.md  daily_drop_2026-04-08.md  daily_drop_2026-04-09.md  daily_drop_2026-04-10.md  daily_drop_2026-04-11.md  daily_drop_2026-04-12.md  daily_drop_2026-04-13.md  daily_drop_2026-04-14.md  daily_drop_2026-04-15.md  daily_drop_2026-04-16.md  daily_drop_2026-04-17.md  daily_drop_2026-04-18.md  daily_drop_2026-05-01.md  daily_drop_2026-05-02.md  daily_drop_2026-05-03.md  daily_drop_2026-05-04.md  daily_drop_2026-05-05.md  daily_drop_2026-05-06.md  daily_drop_2026-05-07.md  daily_drop_2026-05-08.md  daily_drop_2026-05-09.md  daily_drop_2026-05-10.md  daily_drop_2026-05-11.md  daily_drop_2026-05-12.md  daily_drop_2026-05-13.md  daily_drop_2026-05-14.md  (+33 more)
scripts/corpus_analysis_reports/: corpus_analysis_2026-03-23_011231.md  corpus_analysis_2026-03-23_013703.md  corpus_analysis_2026-03-23_014213.md
scripts/yahoo/: yahoo_header_scanner.py  yahoo_imap_debug.py  yahoo_imap_export_test.py  yahoo_imap_list_from.py  yahoo_imap_probe.py  yahoo_index_query.py  yahoo_mbox_inspect.py  yahoo_selective_download.py  yahoo_thread_analysis.py
tests/: conftest.py  dummy_supabase.py  sample.md  test_chunker.py  test_date_parser.py  test_entity_resolution.py  test_joplin_sync_parser.py  test_notebook_resolution.py  test_notes_cli.py  test_openai_embedding_client.py  test_parse_note.py  test_supabase_client.py  test_supabase_client_stub.py  tmp_run.py
tests/cli/: test_notes_upsert_basic.py  test_notes_upsert_debug.py  test_notes_upsert_dry_run.py
tests/e2e/: test_ingestion_dry_run.py  test_ingestion_real_mocked.py
tests/fixtures/: mock_supabase.py  note_basic.md  note_missing_fields.json  note_missing_fields.md  note_simple.json  note_tag_link_1.md  note_with_resources.md  note_with_tags.md  notebook_1.md  parsed_note_simple.json  real_note_1.md
tests/integration/: test_embedding_client_mock.py  test_idempotency_behavior.py  test_pipeline_integration.py  test_supabase_client_mock.py
tests/test_data/joplin_sync/: note_basic.md  note_empty_body.md  note_encrypted.md  note_no_notebook.md  notebook.md  relationship.md  tag.md
tests/unit/: test_archetype_a.py  test_archetype_b.py  test_archetype_c.py  test_archetype_d.py  test_archetype_e.py  test_cli_arguments.py  test_embed_chunks.py  test_embedding_wrapper.py  test_imessage_ingestor.py  test_imessage_parser.py  test_metadata_parsing.py  test_obsidian_parser.py  test_obsidian_syntax.py  test_payload_builder.py  test_resource_extractor.py  test_retrieval_api.py  test_retriever.py
(+30 files in other folders)
