# pyproject.toml — Centralized configuration for Python tooling

# Trigger CI: no-op comment to force GitHub Actions run
# ---------------------------------------------------------------------
# Centralized configuration for Python tooling and project metadata.
#
# This file serves as the single source of truth for:
#   • packaging and installation metadata
#   • formatting rules (black)
#   • import sorting (isort)
#   • linting guardrails (flake8)
#   • static type checking (mypy)
#
# Consolidating these settings ensures:
#   • consistent behavior across local development and CI
#   • reproducible, low‑friction workflows for contributors
#   • clear expectations for code quality and style
#   • minimal configuration drift as the project evolves
#
# Any new tooling or project‑wide settings should be added here to
# maintain a unified, contributor‑friendly configuration surface.
# ---------------------------------------------------------------------

# -------------------------------
# Project metadata and dependencies
# Enables editable installs (pip install -e .) and proper import resolution
# -------------------------------
[project]
name = "personal_knowledge_engine"  # Package name used for installation and import resolution
version = "0.1.0"  # Semantic versioning for your project
description = "Personal Knowledge Engine"  # Short description for packaging tools
readme = "README.md"  # Path to your README file (used by PyPI and tooling)
requires-python = ">=3.10"  # Minimum Python version required
dependencies = [  # Runtime dependencies installed with your package
    "supabase",
    "python-frontmatter",
    # Add any other runtime dependencies here
]

# -------------------------------
# Build system configuration
# Required for editable installs and packaging
# -------------------------------
[build-system]
requires = ["setuptools"]  # Build backend dependency
build-backend = "setuptools.build_meta"  # Use setuptools to build the package

# -------------------------------
# Black: Code formatter
# Ensures consistent, automatic formatting across contributors.
# -------------------------------
[tool.black]
line-length = 100  # Match flake8 and isort for consistency
# Optional: Uncomment to preserve original quote style or trailing commas
# skip-string-normalization = true
# skip-magic-trailing-comma = true

# -------------------------------
# isort: Import sorter
# Keeps imports organized and aligned with Black's style.
# -------------------------------
[tool.isort]
profile = "black"  # Align with Black's style
line_length = 100
known_first_party = ["pke"]  # Replace with your actual top-level module name
combine_as_imports = true
force_sort_within_sections = true

# -------------------------------
# mypy: Static type checker
# Enforces type safety and catches subtle bugs early.
# -------------------------------
[tool.mypy]
python_version = "3.14"
show_error_codes = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = '(^\.venv|^venv|^\.mypy_cache|^\.pytest_cache|^build|^dist)'

# Per-module overrides for third-party or local modules without type hints
[[tool.mypy.overrides]]
module = "fastapi"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "psutil"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "supabase_client"
ignore_missing_imports = true

# -------------------------------
# flake8: Linter
# Provides style guardrails and catches common mistakes.
# -------------------------------
[tool.flake8]
max-line-length = 100  # Match Black and isort
extend-ignore = ["E203", "W503"]  # Avoid conflicts with Black
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    "build",
    "dist"
]
# -------------------------------
# Optional dependencies for development and CI
# Install with: pip install -e .[dev]
# -------------------------------

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]
[tool.setuptools.packages.find]
include = ["pke*", "ingestion*"]

